Add initial support for JWT authorization